# GAUGE

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PRODUCT_PLAN.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  local-adaptation.yml  source-claim-correction.yml
.github/workflows/: ci.yml
.roles/: ROLE.md
.roles/editorial/: citation-auditor.md  numeracy-checker.md  scope-keeper.md
.roles/panel-reviewer/: panel.md
.roles/parliament/: climate-modal-advocate.md  equity-access-advocate.md  freight-host-realist.md  operations-reliability-officer.md  rail-civil-engineer.md  rail-planner.md  transport-economist.md
.roles/stakeholders/: commuter.md  host-freight-railroad.md  intercity-traveler.md  rural-feeder-rider.md  state-dot-rail.md
context/waves/: PHASES.md
corpus/: SCHEMA.md  us-california-zephyr.md  us-capitol-corridor.md  us-cascades.md  us-crescent.md  us-empire-builder.md  us-hiawatha.md  us-keystone.md  us-nec-acela.md  us-nec-regional.md  us-pacific-surfliner.md  us-sunset-limited.md  us-wolverine.md
crates/gauge-cli/: Cargo.toml
crates/gauge-cli/src/: main.rs
crates/gauge-corpus/: Cargo.toml
crates/gauge-gap/: Cargo.toml
crates/gauge-gap/src/: lib.rs
crates/gauge-network/: Cargo.toml
crates/gauge-score/: Cargo.toml
crates/gauge-tier/: Cargo.toml  tiers.toml
crates/gauge-tier/src/: lib.rs
data/: sources.md
docs/adoption/: README.md  local-adaptation-worksheet.md
docs/findings/: 2026-06-frequency-span-of-service.md
docs/vtrace/: ARCHITECTURE.md  CODE_RIGOR.md  CONOPS.md  (+9 more)
(+23 files in other folders)
