[package]
name = "gauge-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gauge"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
gauge-corpus = { path = "../gauge-corpus" }
gauge-gap = { path = "../gauge-gap" }
gauge-score = { path = "../gauge-score" }
gauge-tier = { path = "../gauge-tier" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
